# hello-jetson-nano-world

./: CMakeLists.txt  image-recognition.cpp
image-classification-cpp/: .gitignore  CMakeCache.txt  CMakeLists.txt  HelloNanoWorld  Makefile
live-video-object-detection/: live-obj-detection.py
video-object-detection/: obj-detection-detectnet.py
